<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homepage"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/movie"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_memoir"
            android:icon="@drawable/memoir"
            android:title="@string/menu_memoir" />

        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/mark"
            android:title="@string/menu_watchlist" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/report"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/map"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/signout"
            android:title="@string/menu_login" />
    </group>
</menu>
