<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/text_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvSignUp"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/username"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        app:errorEnabled="true"
        android:layout_marginTop="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="16sp"
        app:errorEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPsd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pswConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/psw"
        android:layout_marginTop="10dp"
        android:hint="@string/passwordConfrim"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="16sp"
        app:errorEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPsdCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/pswConfirm"
        android:hint="@string/tvFirstName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sur_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/first_name"
        android:hint="@string/tvSurname"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tsn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/gen"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="16sp"
        android:text="@string/tvGender"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/sur_name"
        android:layout_marginTop="10dp" />
    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/gen">
        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:checked="true"
            android:text="@string/tvMale" />
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/tvFemale" />

    </RadioGroup>
    <TextView
        android:id="@+id/birdate"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="16sp"
        android:text="@string/tvBirth"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/gender"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/bir"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/birdate"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/birBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/birdate"
        android:layout_toRightOf="@+id/bir"
        android:layout_toEndOf="@+id/bir"
        android:background="@drawable/cal"/>

    <TextView
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="16sp"
        android:text="@string/tvAdd"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/bir"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/st_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/add"
        android:hint="@string/tvSN"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edSno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/st_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/st_no"
        android:hint="@string/tvSName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edSna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/st_name"
        android:hint="@string/tvPostcode"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edpost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sta"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="16sp"
        android:text="@string/tvState"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/postcode"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:id="@+id/state"
        android:layout_below="@+id/sta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:entries="@array/state_array" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/state"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn1"
        android:text="@string/tvSubmit"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/ret"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/submit"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn1"
        android:text="@string/tvReturn"
        android:textColor="#fff"/>

</RelativeLayout>
</ScrollView>