<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    tools:context=".fragment.AddCinemaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="68dp"
        android:textSize="20sp"
        android:text="@string/add_cinema"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:hint="@string/cinema_name"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="16sp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/movieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pcode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/cName"
        android:hint="@string/cinema_postcode"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="16sp"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="215dp"
        android:layout_height="44dp"
        android:layout_below="@+id/pcode"
        android:layout_marginTop="20dp"
        android:text="@string/tvSubmit"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp" />


</RelativeLayout>


