<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        tools:context=".fragment.AddMemoirActivity">
        <TextView
            android:id="@+id/welcomeMemoir"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcomeMemoir"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/movieName"
            android:layout_below="@+id/welcomeMemoir"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/releaseDate"
            android:layout_below="@+id/movieName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>
        <ImageView
            android:id="@+id/image"
            android:layout_width="135dp"
            android:layout_height="172dp"
            android:layout_toRightOf="@+id/movieName"
            android:layout_toEndOf="@+id/movieName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/watch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/releaseDate"
            android:layout_marginTop="21dp"
            android:text="@string/watch"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/watchDate"
            android:layout_below="@+id/watch"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/datePick"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/watch"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/watchDate"
            android:layout_marginStart="30dp"
            android:background="@drawable/cal"
            android:layout_toEndOf="@+id/watchDate" />
        <TextView
            android:id="@+id/watchTime"
            android:layout_below="@+id/watchDate"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/cinema"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/cinema"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/watchDate"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/watchTime"
            android:layout_toRightOf="@+id/watchTime" />
        <Button
            android:id="@+id/addCinema"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_below="@+id/watchDate"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/cinema"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/cinema"
            android:text="@string/add"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cinema"
            android:layout_marginTop="20dp"
            android:hint="@string/comments"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="16sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <RatingBar
            android:id="@+id/stars"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_below="@+id/comment"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:stepSize="0.5"
            android:numStars="5"/>
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/stars"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn1"
            android:text="@string/tvSubmit"
            android:textColor="#fff"/>

    </RelativeLayout>
</ScrollView>