<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        tools:context=".fragment.ReportFragment">
        <TextView
            android:id="@+id/tmpDate"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btnCal"/>
        <TextView
            android:id="@+id/startTv"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/from"/>

        <TextView
            android:id="@+id/startDate"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:text="@string/defaultStart"/>
        <ImageButton
            android:id="@+id/btnFrom"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/startDate"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@+id/startDate"
            android:src="@drawable/ic_add"
            android:layout_marginStart="20dp" />
        <Button
            android:id="@+id/btnCal"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/btnFrom"
            android:layout_marginLeft="20dp"
            android:background="@drawable/cal"
            android:layout_toEndOf="@+id/btnFrom"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:id="@+id/endTv"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_below="@+id/startDate"
            android:hint="@string/to"/>
        <TextView
            android:id="@+id/endDate"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center"
            android:layout_below="@+id/startDate"
            android:layout_marginStart="50dp"
            android:text="@string/defaultEnd"/>
        <ImageButton
            android:id="@+id/btnTo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/btnFrom"
            android:layout_toRightOf="@+id/endDate"
            android:layout_toEndOf="@+id/endDate"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_add"/>

        <Button
            android:id="@+id/btnPie"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_below="@+id/btnFrom"
            android:layout_toRightOf="@+id/btnTo"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@+id/btnTo"
            android:layout_marginStart="20dp"
            android:textSize="10sp"
            android:text="@string/pie_chart"
            tools:ignore="SmallSp" />

        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/chart2"
            android:layout_below="@+id/endDate"
            android:layout_marginBottom="20dp"/>

        <Spinner
            android:id="@+id/barYear"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_below="@+id/chart2"
            android:entries="@array/year_array"/>
        <Button
            android:id="@+id/barChart"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textSize="10sp"
            android:layout_toRightOf="@+id/barYear"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@+id/barYear"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/chart2"
            android:text="@string/bar_chart"/>
        <com.github.mikephil.charting.charts.BarChart
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:id="@+id/chartBar"
            android:layout_below="@+id/barYear"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>
</ScrollView>
